# amiko_wx

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Contacts.cpp  Contacts.hpp  DBAdapter.cpp  DBAdapter.hpp  DataObject.hpp  DataStore.cpp  DataStore.hpp  DefaultsController.cpp  DefaultsController.hpp  FullTextDBAdapter.cpp  FullTextDBAdapter.hpp  FullTextEntry.cpp  FullTextEntry.hpp  FullTextSearch.cpp  FullTextSearch.hpp  GoogleConfig.h.in  InteractionsAdapter.cpp  InteractionsAdapter.hpp  InteractionsCart.cpp  InteractionsCart.hpp  InteractionsHtmlView.cpp  InteractionsHtmlView.hpp  ItemCellView.cpp  ItemCellView.hpp  Medication.cpp  Medication.hpp  Operator.cpp  Operator.hpp  OperatorIDSheetController.cpp  OperatorIDSheetController.hpp  Patient.cpp  Patient.hpp  PatientDBAdapter.cpp  PatientDBAdapter.hpp  PatientSheetController.cpp  PatientSheetController.hpp  (+24 more)
.github/workflows/: main.yaml
card/: HealthCard.cpp  HealthCard.hpp  SmartCard.cpp  SmartCard.hpp
doc/: ywesee_world_history.md
gui/: AboutDialog.cpp  AboutDialog.h  GoogleAuthCopySheet.cpp  GoogleAuthCopySheet.h  GoogleAuthSheet.cpp  GoogleAuthSheet.h  MainWindow.cpp  MainWindow.h  MainWindowBase.cpp  MainWindowBase.h  OperatorIDSheet.cpp  OperatorIDSheet.h  PatientSheet.cpp  PatientSheet.h  PreferencesWindow.cpp  PreferencesWindow.hpp  SplashWindow.cpp  SplashWindow.h  SyncPreferencesPage.cpp  SyncPreferencesPage.hpp
gui/fb/: AppDelegate.fbp
lang/de/: amiko.mo  amiko.po  de_CH.mo  de_CH.po
lang/de/LC_MESSAGES/: amiko.mo
lang/de_CH/: amiko.po
lang/de_CH/LC_MESSAGES/: amiko.mo
lang/fr/: amiko.mo  amiko.po  fr_CH.mo
lang/fr_CH/: amiko.po
lang/fr_CH/LC_MESSAGES/: amiko.mo
print/: Label.cpp  Label.h  LabelPrintout.cpp  LabelPrintout.hpp  MainWindowPrint.cpp  MyPrintout.cpp  MyPrintout.hpp  PrescriptionPrintout.cpp  PrescriptionPrintout.hpp
res/: interactions_callbacks.js  main_callbacks.js
res/lin/: AmiKo.desktop  CoMed.desktop  Comed.desktop
res/mac/: AmiKo.icns  CoMed.icns
res/xpm/: AmiKo.xpm  CoMed.xpm  compendium.xpm  desitin.xpm  export.xpm  favorites.xpm  interactions.xpm  prescription.xpm  splash_1000x670.xpm
sync/: GoogleSyncManager.cpp  GoogleSyncManager.hpp
